--- a/assets/style.css
+++ b/assets/style.css
@@ -46,3 +46,36 @@ body {
 .peertube-select-container, input, textarea{
   border: 1px solid var(--mainBackgroundColor) !important;
 }
+/* Icons hovers */
+#custom-css  a my-global-icon svg circle[stroke="#000000"],
+#custom-css  a my-global-icon svg g[stroke="#000000"],
+#custom-css  a my-global-icon svg path[stroke="#000000"],
+#custom-css  a my-global-icon svg polygon[stroke="#000000"],
+#custom-css  a my-global-icon svg rect[stroke="#000000"],
+#custom-css  a my-global-icon svg ellipse[stroke="#000000"]{
+  stroke: var(--mainForegroundColor) !important;
+}
+#custom-css .dropdown-item:hover my-global-icon svg circle[stroke="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg g[stroke="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg path[stroke="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg polygon[stroke="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg rect[stroke="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg ellipse[stroke="#000000"]{
+  stroke: var(--whiteColor) !important;
+}
+
+
+#custom-css  a my-global-icon svg circle[fill="#000000"],
+#custom-css  a my-global-icon svg g[fill="#000000"],
+#custom-css  a my-global-icon svg path[fill="#000000"],
+#custom-css  a my-global-icon svg polygon[fill="#000000"],
+#custom-css  a my-global-icon svg rect[fill="#000000"]{
+  fill: var(--mainForegroundColor) !important;
+}
+#custom-css .dropdown-item:hover my-global-icon svg circle[fill="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg g[fill="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg path[fill="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg polygon[fill="#000000"],
+#custom-css .dropdown-item:hover my-global-icon svg rect[fill="#000000"]{
+  fill: var(--whiteColor) !important;
+}
