--- a/assets/style.css
+++ b/assets/style.css
@@ -79,3 +79,7 @@ body {
 #custom-css .dropdown-item:hover my-global-icon svg rect[fill="#000000"]{
   fill: var(--whiteColor) !important;
 }
+
+#custom-css .upload-button my-global-icon svg g[stroke="#000000"] {
+  stroke: var(--whiteColor) !important;
+}
