--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,14 @@ body {
   /*font-family: "Open Sans",sans-serif;*/
 }
 
+/* Main background */
+#custom-css .sub-header-container{
+  background-position: center top;
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
+}
+
 #custom-css #search-video{
   background: var(--mainBackgroundColor) !important;
 }
